--- a/src/containers/CIS/components/molecules/CISSigns/HandheldLight/HandheldLight.module.scss
+++ b/src/containers/CIS/components/molecules/CISSigns/HandheldLight/HandheldLight.module.scss
@@ -1,8 +1,5 @@
 @use '../../../../../../theme/' as *;
 
 .plate {
-  height: 32px;
-  width: 26px;
-  transform: translate(-42%, 95%);
-  background: $black;
+  transform: translate(-42%, 100%);
 }
